{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 22,
  "lineage": "7d4cb51e-d82a-07ff-40d0-4602161a472a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:route-table/rtb-08144d8dbf727da06",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-096a815096e22e864",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-08cd6709b0f6f8a91"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-025a1f2087b342ff7",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0a024ec1653a0a513"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0809ffead971432f0",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0489be1815252a915"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-08144d8dbf727da06",
            "owner_id": "978388149693",
            "route_table_id": "rtb-08144d8dbf727da06",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0518ef1055e4c36c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-08a096189d8b16c3a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-08cd6709b0f6f8a91",
            "tags": {
              "Name": "private_app_route_table",
              "cost_center_1": "-",
              "cost_center_2": "-",
              "iaac": "yes",
              "monitoring": "-",
              "operation": "-",
              "provisioned_by": "networking_team",
              "route_table_type": "app",
              "stack": "onetrust_prd"
            },
            "timeouts": null,
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:route-table/rtb-08144d8dbf727da06",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-096a815096e22e864",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-08cd6709b0f6f8a91"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-025a1f2087b342ff7",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0a024ec1653a0a513"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0809ffead971432f0",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0489be1815252a915"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-08144d8dbf727da06",
            "owner_id": "978388149693",
            "route_table_id": "rtb-08144d8dbf727da06",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0518ef1055e4c36c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-08a096189d8b16c3a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0489be1815252a915",
            "tags": {
              "Name": "private_app_route_table",
              "cost_center_1": "-",
              "cost_center_2": "-",
              "iaac": "yes",
              "monitoring": "-",
              "operation": "-",
              "provisioned_by": "networking_team",
              "route_table_type": "app",
              "stack": "onetrust_prd"
            },
            "timeouts": null,
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:route-table/rtb-08144d8dbf727da06",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-096a815096e22e864",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-08cd6709b0f6f8a91"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-025a1f2087b342ff7",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0a024ec1653a0a513"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0809ffead971432f0",
                "route_table_id": "rtb-08144d8dbf727da06",
                "subnet_id": "subnet-0489be1815252a915"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-08144d8dbf727da06",
            "owner_id": "978388149693",
            "route_table_id": "rtb-08144d8dbf727da06",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0518ef1055e4c36c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-08a096189d8b16c3a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0a024ec1653a0a513",
            "tags": {
              "Name": "private_app_route_table",
              "cost_center_1": "-",
              "cost_center_2": "-",
              "iaac": "yes",
              "monitoring": "-",
              "operation": "-",
              "provisioned_by": "networking_team",
              "route_table_type": "app",
              "stack": "onetrust_prd"
            },
            "timeouts": null,
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-0182b2324264d5388",
            "dns_entry": [
              {
                "dns_name": "vpce-0182b2324264d5388-uqgrptnn.autoscaling.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0182b2324264d5388-uqgrptnn-sa-east-1c.autoscaling.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0182b2324264d5388-uqgrptnn-sa-east-1a.autoscaling.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0182b2324264d5388-uqgrptnn-sa-east-1b.autoscaling.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "autoscaling.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0580218WZS1J5X8KWG0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0182b2324264d5388",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0426bc0dcae8aeba5",
              "eni-07072dc3c8fe28406",
              "eni-08d41b380d73d6841"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.autoscaling",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_autoscaling",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_autoscaling",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-029f0861b66be73e3",
            "dns_entry": [
              {
                "dns_name": "vpce-029f0861b66be73e3-imeszy6e.ec2.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-029f0861b66be73e3-imeszy6e-sa-east-1c.ec2.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-029f0861b66be73e3-imeszy6e-sa-east-1b.ec2.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-029f0861b66be73e3-imeszy6e-sa-east-1a.ec2.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02245671QDS9KRT4F67O"
              },
              {
                "dns_name": "ec2.sa-east-1.api.aws",
                "hosted_zone_id": "Z07453371Z2RMY3DLNF01"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-029f0861b66be73e3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a1879089c2214158",
              "eni-0c6a695627ecce5be",
              "eni-0d65b889b1ac04c05"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ec2",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ec2",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-0eda9cef87bfc23cb",
            "dns_entry": [
              {
                "dns_name": "vpce-0eda9cef87bfc23cb-6cxxrk0l.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0eda9cef87bfc23cb-6cxxrk0l-sa-east-1a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0eda9cef87bfc23cb-6cxxrk0l-sa-east-1b.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0eda9cef87bfc23cb-6cxxrk0l-sa-east-1c.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2messages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02245602YVQ65BTFZVPC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0eda9cef87bfc23cb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0210ae95bbd022208",
              "eni-02a8921a93e14aaa3",
              "eni-04e15f518aaabfbd0"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ec2messages",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ec2messages",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ecrapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-00b49faa58c02af13",
            "dns_entry": [
              {
                "dns_name": "vpce-00b49faa58c02af13-kqdkbic7.api.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00b49faa58c02af13-kqdkbic7-sa-east-1b.api.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00b49faa58c02af13-kqdkbic7-sa-east-1c.api.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00b49faa58c02af13-kqdkbic7-sa-east-1a.api.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "api.ecr.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0675104ZZSNNEI4SOV9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00b49faa58c02af13",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06a6475f438d3c87d",
              "eni-0b9e67a44a55473c0",
              "eni-0c0a7e2a17ca2138b"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ecrapi",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ecrapi",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ecrdkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-068e891dee0df1b4a",
            "dns_entry": [
              {
                "dns_name": "vpce-068e891dee0df1b4a-d5mm8au9.dkr.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-068e891dee0df1b4a-d5mm8au9-sa-east-1c.dkr.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-068e891dee0df1b4a-d5mm8au9-sa-east-1a.dkr.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-068e891dee0df1b4a-d5mm8au9-sa-east-1b.dkr.ecr.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "dkr.ecr.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0737547DRQTJQX33VTF"
              },
              {
                "dns_name": "*.dkr.ecr.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0737547DRQTJQX33VTF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-068e891dee0df1b4a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-021f4161c3a68776c",
              "eni-087f30efa26d1cc5d",
              "eni-0cbebd1606135ac98"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ecrdkr",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ecrdkr",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-037cc85722ccfaa5c",
            "dns_entry": [
              {
                "dns_name": "vpce-037cc85722ccfaa5c-hav8ugv5.elasticloadbalancing.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-037cc85722ccfaa5c-hav8ugv5-sa-east-1b.elasticloadbalancing.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-037cc85722ccfaa5c-hav8ugv5-sa-east-1c.elasticloadbalancing.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-037cc85722ccfaa5c-hav8ugv5-sa-east-1a.elasticloadbalancing.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "elasticloadbalancing.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02245223I29ZZDL07UN7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-037cc85722ccfaa5c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03925e194f8b1fcf9",
              "eni-07315f0604ff4b477",
              "eni-07cc469d91fa12175"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_elb",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_elb",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-08517ba6bf383a42c",
            "dns_entry": [
              {
                "dns_name": "vpce-08517ba6bf383a42c-uai5vjmh.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-08517ba6bf383a42c-uai5vjmh-sa-east-1b.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-08517ba6bf383a42c-uai5vjmh-sa-east-1c.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-08517ba6bf383a42c-uai5vjmh-sa-east-1a.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "logs.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z05789102V2S20VH3322R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08517ba6bf383a42c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0afee4f216d8e8ddb",
              "eni-0ca89a4cae67d3046",
              "eni-0d9e8ac39fea22450"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_logs",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_logs",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_s3_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-09b484006610d6ccf",
            "cidr_blocks": [
              "16.12.2.0/24",
              "3.5.232.0/22",
              "16.12.0.0/23",
              "52.95.163.0/24",
              "52.95.164.0/23"
            ],
            "id": "vpce-09b484006610d6ccf",
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6aa54003",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08144d8dbf727da06"
            ],
            "service_name": "com.amazonaws.sa-east-1.s3",
            "state": "available",
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_s3_gw",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_s3_gw",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "data.aws_route_table.private-a",
            "data.aws_route_table.private-b",
            "data.aws_route_table.private-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-0e74eca5b1919ac28",
            "dns_entry": [
              {
                "dns_name": "vpce-0e74eca5b1919ac28-ui3embce.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0e74eca5b1919ac28-ui3embce-sa-east-1a.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0e74eca5b1919ac28-ui3embce-sa-east-1c.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0e74eca5b1919ac28-ui3embce-sa-east-1b.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssm.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0745284H3J5BLHIP6WZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0e74eca5b1919ac28",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0889b6da83b799507",
              "eni-0b65c0a3c9b733002",
              "eni-0f6f173a9f475f621"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ssm",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ssm",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-052b3ac846cf91083",
            "dns_entry": [
              {
                "dns_name": "vpce-052b3ac846cf91083-uuph445b.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-052b3ac846cf91083-uuph445b-sa-east-1c.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-052b3ac846cf91083-uuph445b-sa-east-1a.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-052b3ac846cf91083-uuph445b-sa-east-1b.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z07376183M0R7QDISG3Q1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-052b3ac846cf91083",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b6aa1e13924cc2ad",
              "eni-0c644e4a170a079a7",
              "eni-0cf2c5d307bade9dc"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ssmmessages",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_ssmmessages",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:vpc-endpoint/vpce-04931762b4e3a2647",
            "dns_entry": [
              {
                "dns_name": "vpce-04931762b4e3a2647-ch5qf84x.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-04931762b4e3a2647-ch5qf84x-sa-east-1c.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-04931762b4e3a2647-ch5qf84x-sa-east-1b.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-04931762b4e3a2647-ch5qf84x-sa-east-1a.sts.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "sts.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z06846473AOQ2KKP8M7K8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04931762b4e3a2647",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0964f1e9967659d25",
              "eni-0d133bc37b2a3eb1a",
              "eni-0ea686d80fed0a657"
            ],
            "owner_id": "978388149693",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080cec9f75f0a6fd1",
              "sg-0b3bc898d796cce07"
            ],
            "service_name": "com.amazonaws.sa-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0489be1815252a915",
              "subnet-08cd6709b0f6f8a91",
              "subnet-0a024ec1653a0a513"
            ],
            "tags": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_sts",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "aws_vpc_endpoint-vpce_sts",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].digio-onetrust",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:security-group/sg-080cec9f75f0a6fd1",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3bc898d796cce07"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3bc898d796cce07"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "To node 1025-65535",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3bc898d796cce07"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-080cec9f75f0a6fd1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion Host",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035f79c776f5de3ba"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3bc898d796cce07"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prd-ops-data-discovery-cluster-20230202233009780800000001",
            "name_prefix": "prd-ops-data-discovery-cluster-",
            "owner_id": "978388149693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-ops-data-discovery-cluster",
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "security-group",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "Name": "prd-ops-data-discovery-cluster",
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "security-group",
              "funcionamento": "24x7",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].digio-onetrust",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:978388149693:security-group/sg-0b3bc898d796cce07",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080cec9f75f0a6fd1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0b3bc898d796cce07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion Host via RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035f79c776f5de3ba"
                ],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion Host",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035f79c776f5de3ba"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080cec9f75f0a6fd1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080cec9f75f0a6fd1"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "prd-ops-data-discovery-node-20230202233009796600000002",
            "name_prefix": "prd-ops-data-discovery-node-",
            "owner_id": "978388149693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-ops-data-discovery-node",
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "eks",
              "funcionamento": "24x7",
              "kubernetes.io/cluster/prd-ops-data-discovery": "owned",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "tags_all": {
              "Name": "prd-ops-data-discovery-node",
              "ambiente": "prod",
              "cost-center": "55210210",
              "funcao": "eks",
              "funcionamento": "24x7",
              "kubernetes.io/cluster/prd-ops-data-discovery": "owned",
              "owner": "Arquitetura",
              "workload": "ops-data-discovery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01095b47e31dddb22"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].digio-onetrust",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1087150209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080cec9f75f0a6fd1",
            "security_group_rule_id": "sgr-0524310192da980ed",
            "self": false,
            "source_security_group_id": "sg-0b3bc898d796cce07",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-4274383536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080cec9f75f0a6fd1",
            "security_group_rule_id": "sgr-0506ec167abb48fc6",
            "self": false,
            "source_security_group_id": "sg-0b3bc898d796cce07",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1771734240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080cec9f75f0a6fd1",
            "security_group_rule_id": "sgr-08bb491179e1b25ff",
            "self": false,
            "source_security_group_id": "sg-0b3bc898d796cce07",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_bastion",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from Bastion Host",
            "from_port": 443,
            "id": "sgrule-2484004291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080cec9f75f0a6fd1",
            "security_group_rule_id": "sgr-0ad8e258d97f88dbe",
            "self": false,
            "source_security_group_id": "sg-035f79c776f5de3ba",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3300786520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080cec9f75f0a6fd1",
            "security_group_rule_id": "sgr-0e16c4f346ec227c9",
            "self": false,
            "source_security_group_id": "sg-0b3bc898d796cce07",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].digio-onetrust",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-739991367",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2001371977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0f0bcf0b42d0a3e33",
            "self": false,
            "source_security_group_id": "sg-080cec9f75f0a6fd1",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2992566213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0bd0970007a9223df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1837159131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-07c652db6f090797d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-320796630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0ac571b50824e3089",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2581520902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0b02f8b217206b89b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-398024800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0c705c93ae5a7fc40",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_bastion",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from Bastion Host",
            "from_port": 443,
            "id": "sgrule-3393319842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0241c2f7e1391496c",
            "self": false,
            "source_security_group_id": "sg-035f79c776f5de3ba",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_bastion_win",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from Bastion Host via RDP",
            "from_port": 3389,
            "id": "sgrule-3062911952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-087f29399076e6ce3",
            "self": false,
            "source_security_group_id": "sg-035f79c776f5de3ba",
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1016619913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-05fb48c7c89afa749",
            "self": false,
            "source_security_group_id": "sg-080cec9f75f0a6fd1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-944247463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-08726292e73f26d3a",
            "self": false,
            "source_security_group_id": "sg-080cec9f75f0a6fd1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-1011946372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-01369b1d6d9e2fc8b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3082487201",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-00b3f7a5aa51ebf59",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-333751886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b3bc898d796cce07",
            "security_group_rule_id": "sgr-0c705c93ae5a7fc40",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}